fix overflow chat

--- a/css/style.css
+++ b/css/style.css
@@ -140,8 +140,10 @@
     display: flex;
     flex-direction: column;
     gap: .7rem;
-    overflow: auto;
+    
     padding: 1rem;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 .input-chat{
     display: flex;
